# openai_rust

./: Cargo.toml  README.md
src/: audio.rs  chat.rs  client.rs  image.rs  lib.rs
tests/: audio.rs  chat.rs  image.rs
